Fix alignment

--- a/resources/css/default.scss
+++ b/resources/css/default.scss
@@ -797,3 +797,13 @@ div.preferredidp {
         font-size: small;
         color: gray;
 }
+
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
